<resources>
    <string name="app_name">APPie</string>
    <string name="todo">TODO</string>
    <string name="_00_00_00">00:00:00</string>
    <string name="_00_00_000">timervaluebegin</string>
    <string name="take_picture">Take picture</string>
    <string name="eveline">eveline</string>
    <string name="APPier">APPier</string>
    <string name="Save">Save</string>
    <string name="name">name</string>
    <string name="score">score</string>
    <string name="High_Score" />
    <string name="Saved">Saved</string>
    <string name="backgroundofsplashscreen">backgroundSC</string>
</resources>
