<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nl.joycenienkeeveline.connectfour.tudelft.ide.software.appie.GameOver">

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:adjustViewBounds="true"
        android:contentDescription="@string/todo"
        android:gravity="center_vertical"
        android:scaleType="centerCrop"
        android:src="@drawable/background" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="fill_parent"
                android:layout_height="50dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/todo"
                android:gravity="center_vertical"
                android:scaleType="centerCrop"
                android:src="@drawable/header" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:contentDescription="@string/todo"
                android:gravity="center_horizontal"
                android:src="@drawable/appietekst" />

        </FrameLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/taptochange"
            android:layout_width="100dp"
            android:layout_height="70dp"
            android:layout_below="@+id/yourname"
            android:layout_toEndOf="@+id/gameover"
            android:src="@drawable/taptochange" />

        <ImageView
            android:id="@+id/yourname"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/yourname"/>

        <AutoCompleteTextView
            android:id="@+id/namePlayer"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_alignEnd="@+id/yourname"
            android:layout_alignBottom="@+id/yourname"
            android:layout_marginBottom="2dp"
            android:background="@android:color/transparent"
            android:hint="@string/APPier"/>


        <ImageView
            android:id="@+id/playagain"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginStart="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="70dp"
            android:onClick="playagain"
            android:src="@drawable/playagain"/>

        <ImageView
            android:id="@+id/homescreen"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="60dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="70dp"
            android:onClick="gotoHome"
            android:src="@drawable/homescreen"/>

        <ImageView
            android:id="@+id/gameover"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:src="@drawable/gameover"
             />

        <ImageView
            android:id="@+id/yourscore"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/yourname"
            android:layout_marginTop="-80dp"
            android:src="@drawable/yourscore"/>

        <TextView
            android:id="@+id/score"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_alignBottom="@+id/yourscore"
            android:layout_alignEnd="@+id/yourscore"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:text="@string/_00_00_00"/>


        <ImageView
            android:id="@+id/highscore"
            android:layout_width="250dp"
            android:layout_height="30dp"
            android:layout_centerHorizontal="true"
            android:layout_alignTop="@+id/yourname"
            android:layout_marginTop="-40dp"
            android:src="@drawable/highscore"/>

        <TextView
            android:id="@+id/highestscore"
            android:layout_width="140dp"
            android:layout_height="30dp"
            android:layout_alignBottom="@+id/highscore"
            android:layout_alignEnd="@+id/highscore"
            android:textColor="@color/colorBlack"
            android:textSize="20sp"
            android:text="@string/High_Score"
            />

        <ImageView
            android:id="@+id/savebtn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:visibility="visible"
            android:layout_alignBottom="@+id/namePlayer"
            android:layout_alignEnd="@+id/taptochange"
            android:layout_marginBottom="4dp"
            android:onClick="onClickSave"
            android:src="@drawable/saveklein" />

        <TextView
            android:id="@+id/proberen"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_alignBottom="@+id/taptochange"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:text="@string/Saved"
            android:textSize="20sp"
            android:visibility="invisible"
             />

    </RelativeLayout>

</android.support.constraint.ConstraintLayout>